corrected overflow

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     margin: 0px;
     padding: 0px;
     list-style-type: none;
+    max-width: 100vw;
 }
 
 /* header */
@@ -15,6 +16,7 @@ header {
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     z-index: 2;
+    max-width: 100vw;
 }
 
 li {
